--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "emoji-picker-react": "^4.14.2",
     "express": "^5.1.0",
     "lucide-react": "^0.546.0",
     "react": "^19.2.0",
