--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lucide-react": "^0.546.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-draggable": "^4.4.6",
     "react-router-dom": "^7.9.4",
     "recharts": "^3.3.0",
     "socket.io": "^4.8.1",
