--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "cors": "^2.8.5",
     "emoji-picker-react": "^4.14.2",
     "express": "^5.1.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.546.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-draggable": "^4.4.6",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.9.4",
     "recharts": "^3.3.0",
     "socket.io": "^4.8.1",
