--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "@fullcalendar/timegrid": "^6.1.19",
     "cors": "^2.8.5",
     "emoji-picker-react": "^4.14.2",
-    "express": "^5.1.0",
+    "exceljs": "^4.4.0",
+    "express": "^5.2.1",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.546.0",
+    "mssql": "^12.2.0",
+    "multer": "^2.0.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-draggable": "^4.4.6",
