--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "emoji-picker-react": "^4.14.2",
     "exceljs": "^4.4.0",
     "express": "^5.2.1",
+    "jspdf": "^3.0.4",
+    "jspdf-autotable": "^5.0.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.546.0",
     "mssql": "^12.2.0",
@@ -35,7 +37,8 @@
     "react-router-dom": "^7.9.4",
     "recharts": "^3.5.0",
     "socket.io": "^4.8.1",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
